[package]
name = "solana-escrow"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = "2.0.7"
thiserror = "1.0.62"
arrayref = "0.3.7"
spl-token = { version = "6.0.0", features = ["no-entrypoint"] }

[lib]
crate-type = ["cdylib", "lib"]

[dev-dependencies]
solana-sdk = { version = "2.0.7" }
solana-program-test = "2.0.7"